--- a/config/dm/config.yml
+++ b/config/dm/config.yml
@@ -2,15 +2,12 @@ default:
 
   ckeditor:
     config:
-
       toolbar:
         - ['Format', 'Bold', 'Italic','Strike','Blockquote', '-', 'NumberedList', 'BulletedList', '-', 'Link', 'Unlink']
         - ['PasteText','PasteFromWord']
         - ['Undo','Redo']
         - ['Image','HorizontalRule','SpecialChar']
-
       resize_enabled:     false
-
       extraPlugins:       diem
-
       customConfig:       ''
+      baseFloatZIndex:    20000000        # set to a higher value defined for jquery ui dialogs, see dmCoreEditCtrl.js
