add source and template button

--- a/config/dm/config.yml
+++ b/config/dm/config.yml
@@ -3,7 +3,7 @@ default:
   ckeditor:
     config:
       toolbar:
-        - ['Maximize']
+        - ['Maximize', 'Source', 'Templates']
         - ['Format', 'Bold', 'Italic','Strike','Blockquote', '-', 'NumberedList', 'BulletedList', '-', 'Link', 'Unlink']
         - ['PasteText','PasteFromWord']
         - ['Undo','Redo']
